--- a/.github/workflows/hashes.yml
+++ b/.github/workflows/hashes.yml
@@ -9,7 +9,9 @@ jobs:
   gen-hashes:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
       - name: Install Node v12
         uses: actions/setup-node@v1
         with:
