--- a/.github/workflows/hashes.yml
+++ b/.github/workflows/hashes.yml
@@ -20,13 +20,13 @@ jobs:
         run: |
           mkdir -p $GITHUB_WORKSPACE/target
           cd "$GITHUB_WORKSPACE/resourcepack/variant 1/sd/"
-          zip -r $GITHUB_WORKSPACE/target/EmojiChat.1.SD.ResourcePack.zip *
+          zip -Xr $GITHUB_WORKSPACE/target/EmojiChat.1.SD.ResourcePack.zip *
           cd "$GITHUB_WORKSPACE/resourcepack/variant 1/hd/"
-          zip -r $GITHUB_WORKSPACE/target/EmojiChat.1.HD.ResourcePack.zip *
+          zip -Xr $GITHUB_WORKSPACE/target/EmojiChat.1.HD.ResourcePack.zip *
           cd "$GITHUB_WORKSPACE/resourcepack/variant 2/sd/"
-          zip -r $GITHUB_WORKSPACE/target/EmojiChat.2.SD.ResourcePack.zip *
+          zip -Xr $GITHUB_WORKSPACE/target/EmojiChat.2.SD.ResourcePack.zip *
           cd "$GITHUB_WORKSPACE/resourcepack/variant 2/hd/"
-          zip -r $GITHUB_WORKSPACE/target/EmojiChat.2.HD.ResourcePack.zip *
+          zip -Xr $GITHUB_WORKSPACE/target/EmojiChat.2.HD.ResourcePack.zip *
       - name: Generate Hashes
         run: node automation/genHashes.js
       - name: Commit Updates
